@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>net.sf.ehcache</groupId>
     <artifactId>ehcache-tools</artifactId>
-    <version>1.0.0</version>
+    <version>1.1.0</version>
     <name>EhCache tools</name>
     <description>Ehcache tools</description>
 
@@ -16,11 +16,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
+        <tc-connect-servers>tcvm:9510,tcvm:9610</tc-connect-servers>
         <junit.version>4.11</junit.version>
         <slf4j.version>1.7.1</slf4j.version>
-        <appassembler.program.tcping.tc.license>${user.home}/terracotta-license.key</appassembler.program.tcping.tc.license>
-        <appassembler.program.tcping.tc.url>tcvm:9510</appassembler.program.tcping.tc.url>
     </properties>
 
     <developers>
@@ -50,6 +48,7 @@
         </developer>
     </developers>
 
+<<<<<<< HEAD
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
@@ -58,6 +57,23 @@
             <type>jar</type>
             <scope>test</scope>
         </dependency>
+=======
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
+			<type>jar</type>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<type>jar</type>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
+>>>>>>> gbshiva/master
 
         <dependency>
             <groupId>com.lexicalscope.jewelcli</groupId>
@@ -85,6 +101,7 @@
         </dependency>
     </dependencies>
 
+<<<<<<< HEAD
     <build>
         <!-- <resources> <resource> <directory>src/main/resources</directory> <filtering>true</filtering>
             <includes> <include>**/*</include> </includes> </resource> </resources> -->
@@ -108,85 +125,115 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
-                <version>1.9</version>
+                <version>1.3.1</version>
                 <configuration>
-                    <platforms><platform>all</platform></platforms>
                     <configurationDirectory>config</configurationDirectory>
                     <configurationSourceDirectory>${basedir}/resources</configurationSourceDirectory>
                     <copyConfigurationDirectory>true</copyConfigurationDirectory>
                     <includeConfigurationDirectoryInClasspath>true</includeConfigurationDirectoryInClasspath>
                     <repositoryLayout>flat</repositoryLayout>
                     <useWildcardClassPath>true</useWildcardClassPath>
+=======
+				<dependency>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-simple</artifactId>
+					<version>${slf4j.version}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+		
+		<profile>
+			<id>ehcache-2.8.x</id>
+			<properties>
+				<bigmemory.version>4.1.1</bigmemory.version>
+				<ehcache-ee.version>2.8.1</ehcache-ee.version>
+				<toolkit.version>4.1.1</toolkit.version>
+				<slf4j.version>1.7.1</slf4j.version>
+				<junit.version>4.11</junit.version>
+				<net.sf.ehcache.configurationResourceName>ehcache.xml</net.sf.ehcache.configurationResourceName>
+			</properties>
+			<dependencies>
+				<!-- EhCache -->
+				<!-- <dependency>
+					<groupId>org.terracotta.bigmemory</groupId>
+					<artifactId>bigmemory</artifactId>
+					<version>${bigmemory.version}</version>
+				</dependency> -->
+				<dependency>
+					<groupId>net.sf.ehcache</groupId>
+					<artifactId>ehcache-ee</artifactId>
+					<version>${ehcache-ee.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.terracotta</groupId>
+					<artifactId>terracotta-toolkit-runtime-ee</artifactId>
+					<version>${toolkit.version}</version>
+				</dependency>
+				<!-- SLF4J -->
+				<dependency>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+					<version>${slf4j.version}</version>
+				</dependency>
 
-                    <!-- Default Extra JVM arguments if not defined at the program level -->
-                    <extraJvmArguments>-Xms64m -Xmx256m -XX:MaxDirectMemorySize=10G</extraJvmArguments>
+				<dependency>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-simple</artifactId>
+					<version>${slf4j.version}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+		
+		
+		
+		
+		
+		<profile>
+			<id>ehcache-2.7.x</id>
+			<properties>
+				<bigmemory.version>4.0.2</bigmemory.version>
+				<ehcache-ee.version>2.7.2</ehcache-ee.version>
+				<toolkit.version>4.0.2</toolkit.version>
+				<slf4j.version>1.7.1</slf4j.version>
+				<junit.version>4.11</junit.version>
+				<net.sf.ehcache.configurationResourceName>ehcache.xml</net.sf.ehcache.configurationResourceName>
+			</properties>
+			<dependencies>
+				<!-- EhCache -->
+				<!-- <dependency>
+					<groupId>org.terracotta.bigmemory</groupId>
+					<artifactId>bigmemory</artifactId>
+					<version>${bigmemory.version}</version>
+				</dependency> -->
+				<dependency>
+					<groupId>net.sf.ehcache</groupId>
+					<artifactId>ehcache-ee</artifactId>
+					<version>${ehcache-ee.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.terracotta</groupId>
+					<artifactId>terracotta-toolkit-runtime-ee</artifactId>
+					<version>${toolkit.version}</version>
+				</dependency>
+				<!-- SLF4J -->
+				<dependency>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+					<version>${slf4j.version}</version>
+				</dependency>
+>>>>>>> gbshiva/master
+
+                    <!-- Extra JVM arguments that will be included in the bin scripts -->
+                    <extraJvmArguments>-Xms512m -Xmx1024m -XX:MaxPermSize=256m
+                        -XX:+UseParallelOldGC -XX:+UseCompressedOops
+                        -XX:MaxDirectMemorySize=10G
+                        -Dcom.tc.productkey.path=${user.home}/terracotta-license.key
+                        -Dehcache.config.path=/Users/FabienSanglier/MyDev/MyTools/Terracotta-Tester-Utils/GenericCacheTester1-4x/resources/ehcache.xml
+                    </extraJvmArguments>
                     <programs>
                         <program>
-                            <mainClass>com.terracotta.tools.tcPing</mainClass>
-                            <name>TerracottaHealthCheck_Step1</name>
-                            <commandLineArguments>
-                                <commandLineArgument>1 ${maven.build.timestamp} 10000</commandLineArgument>
-                            </commandLineArguments>
-                            <jvmSettings>
-                                <initialMemorySize>64m</initialMemorySize>
-                                <maxMemorySize>128m</maxMemorySize>
-                                <extraArguments>
-                                    <extraArgument>-XX:MaxDirectMemorySize=10G</extraArgument>
-                                    <extraArgument>-Dcom.tc.productkey.path=${appassembler.program.tcping.tc.license}</extraArgument>
-                                    <extraArgument>-Dtc.connect.servers=${appassembler.program.tcping.tc.url}</extraArgument>
-                                    <extraArgument>-Dehcache.config.path=classpath:ehcache-ping.xml</extraArgument>
-                                </extraArguments>
-                            </jvmSettings>
-                        </program>
-                        <program>
-                            <mainClass>com.terracotta.tools.tcPing</mainClass>
-                            <name>TerracottaHealthCheck_Step2</name>
-                            <commandLineArguments>
-                                <commandLineArgument>2 ${maven.build.timestamp} 10000</commandLineArgument>
-                            </commandLineArguments>
-                            <jvmSettings>
-                                <initialMemorySize>64m</initialMemorySize>
-                                <maxMemorySize>128m</maxMemorySize>
-                                <extraArguments>
-                                    <extraArgument>-XX:MaxDirectMemorySize=10G</extraArgument>
-                                    <extraArgument>-Dcom.tc.productkey.path=${appassembler.program.tcping.tc.license}</extraArgument>
-                                    <extraArgument>-Dtc.connect.servers=${appassembler.program.tcping.tc.url}</extraArgument>
-                                    <extraArgument>-Dehcache.config.path=classpath:ehcache-ping.xml</extraArgument>
-                                </extraArguments>
-                            </jvmSettings>
-                        </program>
-                        <program>
-                            <mainClass>com.terracotta.tools.cacheSize</mainClass>
-                            <name>PrintCacheSize</name>
-                            <jvmSettings>
-                                <initialMemorySize>64m</initialMemorySize>
-                                <maxMemorySize>128m</maxMemorySize>
-                                <extraArguments>
-                                    <extraArgument>-Dehcache.config.path=some-custom-ehcache.xml</extraArgument>
-                                </extraArguments>
-                            </jvmSettings>
-                        </program>
-                        <program>
-                            <mainClass>com.terracotta.tools.cacheClear</mainClass>
-                            <name>ClearCacheEntries</name>
-                            <jvmSettings>
-                                <initialMemorySize>64m</initialMemorySize>
-                                <maxMemorySize>128m</maxMemorySize>
-                                <extraArguments>
-                                    <extraArgument>-Dehcache.config.path=some-custom-ehcache.xml</extraArgument>
-                                </extraArguments>
-                            </jvmSettings>
-                        </program>
-                        <program>
-                            <mainClass>com.terracotta.tools.cachePrint</mainClass>
-                            <name>PrintCacheEntries</name>
-                            <jvmSettings>
-                                <initialMemorySize>64m</initialMemorySize>
-                                <maxMemorySize>128m</maxMemorySize>
-                                <extraArguments>
-                                    <extraArgument>-Dehcache.config.path=some-custom-ehcache.xml</extraArgument>
-                                </extraArguments>
-                            </jvmSettings>
+                            <mainClass>com.terracotta.tools.EhcacheCli</mainClass>
+                            <name>EhcacheCli.sh</name>
                         </program>
                     </programs>
                 </configuration>
@@ -212,31 +259,13 @@
 
     <profiles>
         <profile>
-            <id>ehcache-2.6</id>
-            <properties>
-                <ehcache-core-ee.version>2.6.8</ehcache-core-ee.version>
-                <ehcache-terracotta-ee.version>2.6.8</ehcache-terracotta-ee.version>
-            </properties>
-            <dependencies>
-                <!-- EhCache -->
-                <dependency>
-                    <groupId>net.sf.ehcache</groupId>
-                    <artifactId>ehcache-core-ee</artifactId>
-                    <version>${ehcache-core-ee.version}</version>
-                </dependency>
-
-                <dependency>
-                    <groupId>net.sf.ehcache</groupId>
-                    <artifactId>ehcache-terracotta-ee</artifactId>
-                    <version>${ehcache-terracotta-ee.version}</version>
-                </dependency>
-            </dependencies>
-        </profile>
-        <profile>
             <id>ehcache-2.7</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
             <properties>
-                <ehcache-ee.version>2.7.6</ehcache-ee.version>
-                <toolkit.version>4.0.6</toolkit.version>
+                <ehcache-ee.version>2.7.6_fix2</ehcache-ee.version>
+                <toolkit.version>4.0.6_fix2</toolkit.version>
             </properties>
             <dependencies>
                 <!-- EhCache -->
@@ -244,13 +273,11 @@
                     <groupId>net.sf.ehcache</groupId>
                     <artifactId>ehcache-ee</artifactId>
                     <version>${ehcache-ee.version}</version>
-                    <scope>provided</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.terracotta</groupId>
                     <artifactId>terracotta-toolkit-runtime-ee</artifactId>
                     <version>${toolkit.version}</version>
-                    <scope>provided</scope>
                 </dependency>
             </dependencies>
         </profile>
@@ -260,8 +287,8 @@
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <ehcache-ee.version>2.8.3</ehcache-ee.version>
-                <toolkit.version>4.1.3</toolkit.version>
+                <ehcache-ee.version>2.8.6</ehcache-ee.version>
+                <toolkit.version>4.1.6</toolkit.version>
             </properties>
             <dependencies>
                 <!-- EhCache -->
@@ -269,13 +296,11 @@
                     <groupId>net.sf.ehcache</groupId>
                     <artifactId>ehcache-ee</artifactId>
                     <version>${ehcache-ee.version}</version>
-                    <scope>compile</scope>
                 </dependency>
                 <dependency>
                     <groupId>org.terracotta</groupId>
                     <artifactId>terracotta-toolkit-runtime-ee</artifactId>
                     <version>${toolkit.version}</version>
-                    <scope>compile</scope>
                 </dependency>
             </dependencies>
         </profile>
@@ -292,6 +317,11 @@
             <releases>
                 <enabled>true</enabled>
             </releases>
+        </repository>
+        <repository>
+            <id>saggs_thirdparty</id>
+            <name>SAGGS Third Party</name>
+            <url>http://bieber.softwareaggov.com:8080/nexus/content/repositories/thirdparty/</url>
         </repository>
     </repositories>
 </project>
